<resources>
    <string name="app_name">ElisaAndroidERestaurant</string>
    <string name="bienvenue_chez">Bienvenue chez</string>
    <string name="zaza">Zaza</string>
    <string name="todo">TODO</string>
    <string name="entrees">Entrées</string>
    <string name="plats">Plats</string>
    <string name="desserts">Desserts</string>
    <string name="entrees_menu">Entrees</string>
    <string name="category">Category</string>
    <string name="detail">detail</string>

    <string name="ble_scan_play">Lancer le scan BLE</string>
    <string name="ble_scan_pause">Scan BLE en cours _</string>
    <string name="ble_scan_device_error">BLE non disponible sur cet appareil</string>


    <string-array name="plats">
        <item>Tartiflette</item>
        <item>Boeuf bourguignon</item>

    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="scan_ble">SCAN BLE</string>
    <string name="puissance">Puissance</string>
    <string name="p">P</string>
    <string name="ble_device_disconnected">Statut : Déconnecté</string>
    <string name="ble_device_connected">Statut : Connecté</string>
    <string name="ble_device_characteristic_read" />
    <string name="ble_device_characteristic_write" />
</resources>