<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="51dp"
        android:layout_marginTop="28dp"
        android:fontFamily="serif"
        android:text="@string/bienvenue_chez"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="66dp"
        android:fontFamily="cursive"
        android:text="@string/zaza"
        android:textAlignment="center"
        android:textSize="52sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="261dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/cuisto"
        app:layout_constraintBottom_toTopOf="@+id/entrees"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/entrees"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginTop="252dp"
        android:fontFamily="serif"
        android:text="@string/entrees"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/plats"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginTop="40dp"
        android:fontFamily="serif"
        android:text="@string/plats"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/entrees" />

    <Button
        android:id="@+id/desserts"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginTop="40dp"
        android:fontFamily="serif"
        android:text="@string/desserts"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plats" />

</androidx.constraintlayout.widget.ConstraintLayout>